# hiragana-katakana

./: .gitignore  README.md  compose.yaml  package-lock.json  package.json
api/: Cargo.toml
api/migrations/: 001_create_auth_user_table.sql  002_create_syllable_table.sql  003_create_word_table.sql  004_insert_users.sql  005_insert_syllables.sql
api/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  server.rs  service.rs  sever.rs  syllable.rs  user.rs  word.rs
api/src/scripts/: insert_users.sql  insert_words.sql
api/src/service/: constant.rs  function.rs
api/src/syllable/: handler.rs  model.rs  service.rs
api/src/user/: handler.rs  model.rs  service.rs
api/src/word/: handler.rs  model.rs  service.rs
back/: Cargo.toml
back/src/: main.rs
front/src/app/: page.tsx
src/: App.tsx
src/app/: layout.tsx  page.tsx
src/app/components/: Radio.tsx
src/app/hiragana-table/: layout.tsx  page.tsx
src/app/hiragana-traps/: layout.tsx  page.tsx
src/app/japanese/: JapanesePage.tsx  JapaneseRecord.tsx
src/app/lib/: additionalSyllabaryRecords.tsx  hiraganaTraps.tsx  replaceWithExistingCharacter.tsx  syllabaryRecord.tsx  syllabaryTraps.tsx  vocabularyRecord.tsx
src/app/roman-to-japanese/: layout.tsx  page.tsx
src/app/services/: theme.tsx
src/app/syllabary/: page.tsx
src/app/syllabary-table/: page.tsx
src/app/syllabary-training/: page.tsx
src/app/syllabary-traps/: layout.tsx  page.tsx
src/app/vocabulary-dictionary/: page.tsx
src/app/vocabulary-theme/: page.tsx
src/hiragana/: JapanesePage.tsx
web/: .eslintrc.json  package-lock.json  package.json
(+70 files in other folders)
