[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
tokio-postgres = { version = "0.7.12", features = ["with-uuid-1"] }
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7.9"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "chrono", "uuid"] }
tracing = "0.1.41"
anyhow = "1.0.94"
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
moka = { version = "0.12.8", features = ["sync"] }
tracing-subscriber = "0.3.19"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"


